feat: Use Integer.valueOf (#3565)
Using new Integer has been deprecated in favour
of Integer.valueOf , use this instead
Note generated builder classes still use
new Integer but we do not check these in.

Signed-off-by: Samuel Hawker <samuel.hawker@ibm.com>